Menu responsive fixed but issues with z-index

--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,9 @@ header {
     height: 120px;
     top: 0;
     width: 100%;
-    z-index: 1000;
     background-color: #f2f2f2;
     /* border: 1px solid red; */
-
     /* TODO menu pas resposive >>> quand en grand écran le menu depasse le header*/
-    /* border: 2px solid blue; */
 }
 
 /*-----------------------------*/
@@ -31,26 +28,24 @@ header {
     .header-logo {
         display: flex;
         align-items: center;
-        justify-content: center;
         padding-left: 5px;
         /* border: 1px solid blue; */
 
         img {
-            /* width: 25vw; */
             width: 100%;
-            /* border: 1px solid red; */
+            padding: 0;
+            /* border: 1px solid green; */
         }
     }
 
     .header-menu-section {
         margin-left: auto;
-        align-items: flex-start;
-        /* border: 1px solid blue; */
+        /* border: 1px solid lightskyblue; */
 
         ul {
             display: flex;
             justify-content: center;
-            padding: 0;
+            padding:  0;
             margin-left: 20px;
             /* border: 1px solid green; */
         }
@@ -74,7 +69,7 @@ header {
             font-size: 2vw;
             font-weight: bold;
             color: #000000;
-            /* border: 1px solid black; */
+            /* border: 1px solid yellow; */
         }
     
         /* Style au survol */
@@ -86,18 +81,6 @@ header {
     }
 }
 
-/* .header-social-icons {
-    display: flex;
-    justify-content: right;
-    border: 1px solid green;
-    
-    .icon {
-        width: 20px;
-        height: 20px;
-        padding: 10px;
-    }
-} */
-
 /* Default Dropdown menu */
 .header-dropdown-menu{
    display: none;
@@ -105,43 +88,95 @@ header {
 
 /* Responsive menu */
 @media screen and (max-width: 800px) {
-    /* masquer le menu standard */
-    .header-menu-section {
-      display: none;
-    }
-
-    /* TODO changer position des icones >>> masquer pour l'instant */
-    .header-social-icons {
-        display: none;
-    }
-
     header {
+        z-index: 1;
         display: flex;
         justify-content: center;
+        /* background-color: aqua; */
     }
-
+    
     .header-menu {
+        /* display: flex; */
         flex-direction: column;
-        display: flex;
         align-items: center;
-        justify-content: space-around;
-
-        .header-logo img {
-            width: 80%;
+        justify-content: center;
+        /* background-color: red; */
+        
+        .header-logo {
+            /* display: flex; */
+            /* align-items: center; */
+            justify-content: center;
+            padding: 0;
+            img {
+                width: 80%;
+            }
         }
     }
     
     .header-dropdown-menu {
         display: flex; /* TODO: pourquoi ca marche pas qd on enlève? */
-        width: 50px;
-
-        .burger-bar-icon {
-            width: 100%;
-            height: 100%;
+        /* border: 1px solid green; */
+        
+        .default-icon {
+            z-index: 1;
+            margin-top: 10px;
+            width: 50px;
+            /* border: 1px solid blue; */
         }
-        /* border: 1px solid blue; */
     }
-  }
+
+    .header-menu-section.open-menu {
+        z-index: 1;
+        opacity: 1;
+        transition: 0.6s;
+    }
+
+    .header-menu-section.close-menu {
+        z-index: 1;
+        opacity: 0;
+        transition: 0.6s;
+    }
+
+    .header-menu-section {
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.7);
+        backdrop-filter: blur(7px);
+        opacity: 0;
+        /* border: 1px solid green; */
+
+        ul {
+            flex-direction: column;
+            margin: 200px 0;
+            margin-left: 0!important;
+            /* border: 1px solid orange; */
+        }
+        
+        li {
+            display: flex;
+            justify-content: center;
+            /* border: 1px solid blue; */
+        }
+
+        .filter-item,
+        .about,
+        .contact {
+            font-size: 6vw!important;
+            color: #ffffff!important;
+        }
+    
+        /* Style au survol */
+        .filter-item:hover,
+        .about:hover,
+        .contact:hover {
+            color: #aaaaaa!important;
+        }
+    }
+}
 
 /*----------------------------------------------------------*/
 /* MAIN */
@@ -149,6 +184,8 @@ header {
 main {
     margin-top: 120px;
     margin-bottom: 100px;
+    z-index: 1000;
+    background-color: aqua;
     /* border: 1px solid blue; */
 }
 
@@ -158,6 +195,7 @@ main {
 .homepage-video-container { 
     /* max-width: 1000px; */
     margin-bottom: 50px;
+    z-index: 1000;
 }
 
 .homepage-video {
